es/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    COS
    CHARACTER
    STRING
    SHIFT_LEFT
    YOUR
    DOT
    SIN
    GATO
    COLON
    TAN
    MINE
    SHIFT_RIGHT
    SQRT

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> body
Rule 2     inicio -> body inicio
Rule 3     body -> cond
Rule 4     body -> inst SEMICOLON
Rule 5     body -> loop
Rule 6     body -> decl_function
Rule 7     decl_function -> FUN ID LPAREN lista_id RPAREN LBRACE body_list RBRACE
Rule 8     lista_id -> ID COMMA lista_id
Rule 9     lista_id -> ID
Rule 10    lista_id -> empty
Rule 11    cond -> IF LPAREN comparative RPAREN llaves
Rule 12    cond -> IF LPAREN comparative RPAREN llaves ELSE llaves
Rule 13    llaves -> LBRACE body_list RBRACE
Rule 14    llaves -> inst SEMICOLON
Rule 15    loop -> FOR LPAREN inst SEMICOLON comparative SEMICOLON exp RPAREN llaves
Rule 16    loop -> WHILE LPAREN comparative RPAREN llaves
Rule 17    loop -> DO llaves WHILE LPAREN comparative RPAREN SEMICOLON
Rule 18    loop -> FOREACH LPAREN ID AS ID RPAREN llaves
Rule 19    comparative -> unary_comp
Rule 20    comparative -> comparative op lista_comp
Rule 21    comparative -> LPAREN comparative RPAREN
Rule 22    lista_comp -> comparative lista_comp
Rule 23    lista_comp -> empty
Rule 24    op -> LOR
Rule 25    op -> LAND
Rule 26    inst -> asig
Rule 27    inst -> orden
Rule 28    inst -> funcall
Rule 29    inst -> break
Rule 30    inst -> RETURN exp
Rule 31    inst -> RETURN
Rule 32    break -> BREAK
Rule 33    recp -> ID
Rule 34    recp -> ID LBRACKET exp RBRACKET
Rule 35    asig -> recp ASSIGN exp
Rule 36    asig -> recp EQ_PLUS exp
Rule 37    asig -> recp EQ_MINUS exp
Rule 38    asig -> recp EQ_TIMES exp
Rule 39    asig -> recp EQ_DIV exp
Rule 40    asig -> recp EQ_MODULO exp
Rule 41    exp -> exp_unary
Rule 42    exp -> LPAREN exp RPAREN
Rule 43    exp -> exp PLUS exp
Rule 44    exp -> exp MINUS exp
Rule 45    exp -> exp TIMES exp
Rule 46    exp -> exp DIV exp
Rule 47    exp -> exp MODULO exp
Rule 48    exp -> DOUBLE_PLUS exp_unary
Rule 49    exp -> exp_unary DOUBLE_PLUS
Rule 50    exp -> exp_unary DOUBLE_MINUS
Rule 51    exp -> DOUBLE_MINUS exp_unary
Rule 52    exp -> ID LBRACKET exp RBRACKET
Rule 53    exp -> funcall
Rule 54    funcall -> ID LPAREN lista_atrib RPAREN
Rule 55    lista_atrib -> exp COMMA lista_atrib
Rule 56    lista_atrib -> exp
Rule 57    lista_atrib -> empty
Rule 58    exp_unary -> INUMBER
Rule 59    exp_unary -> FNUMBER
Rule 60    exp_unary -> ID
Rule 61    exp_unary -> MINUS exp_unary
Rule 62    exp_unary -> TRUE
Rule 63    exp_unary -> FALSE
Rule 64    body_list -> body
Rule 65    body_list -> body body_list
Rule 66    body_list -> empty
Rule 67    unary_comp -> exp LESS exp
Rule 68    unary_comp -> exp GREATER exp
Rule 69    unary_comp -> exp LESS_EQ exp
Rule 70    unary_comp -> exp EQ exp
Rule 71    unary_comp -> exp NOT_EQ exp
Rule 72    unary_comp -> exp GREATER_EQ exp
Rule 73    unary_comp -> exp
Rule 74    empty -> <empty>
Rule 75    orden -> HIT LPAREN lista_atrib RPAREN
Rule 76    orden -> PASS LPAREN lista_atrib RPAREN
Rule 77    orden -> GOTO LPAREN lista_atrib RPAREN
Rule 78    orden -> SHOOT LPAREN lista_atrib RPAREN

Terminals, with rules where they appear

AS                   : 18
ASSIGN               : 35
BREAK                : 32
CHARACTER            : 
COLON                : 
COMMA                : 8 55
COS                  : 
DIV                  : 46
DO                   : 17
DOT                  : 
DOUBLE_MINUS         : 50 51
DOUBLE_PLUS          : 48 49
ELSE                 : 12
EQ                   : 70
EQ_DIV               : 39
EQ_MINUS             : 37
EQ_MODULO            : 40
EQ_PLUS              : 36
EQ_TIMES             : 38
FALSE                : 63
FNUMBER              : 59
FOR                  : 15
FOREACH              : 18
FUN                  : 7
GATO                 : 
GOTO                 : 77
GREATER              : 68
GREATER_EQ           : 72
HIT                  : 75
ID                   : 7 8 9 18 18 33 34 52 54 60
IF                   : 11 12
INUMBER              : 58
LAND                 : 25
LBRACE               : 7 13
LBRACKET             : 34 52
LESS                 : 67
LESS_EQ              : 69
LOR                  : 24
LPAREN               : 7 11 12 15 16 17 18 21 42 54 75 76 77 78
MINE                 : 
MINUS                : 44 61
MODULO               : 47
NOT_EQ               : 71
PASS                 : 76
PLUS                 : 43
RBRACE               : 7 13
RBRACKET             : 34 52
RETURN               : 30 31
RPAREN               : 7 11 12 15 16 17 18 21 42 54 75 76 77 78
SEMICOLON            : 4 14 15 15 17
SHIFT_LEFT           : 
SHIFT_RIGHT          : 
SHOOT                : 78
SIN                  : 
SQRT                 : 
STRING               : 
TAN                  : 
TIMES                : 45
TRUE                 : 62
WHILE                : 16 17
YOUR                 : 
error                : 

Nonterminals, with rules where they appear

asig                 : 26
body                 : 1 2 64 65
body_list            : 7 13 65
break                : 29
comparative          : 11 12 15 16 17 20 21 22
cond                 : 3
decl_function        : 6
empty                : 10 23 57 66
exp                  : 15 30 34 35 36 37 38 39 40 42 43 43 44 44 45 45 46 46 47 47 52 55 56 67 67 68 68 69 69 70 70 71 71 72 72 73
exp_unary            : 41 48 49 50 51 61
funcall              : 28 53
inicio               : 2 0
inst                 : 4 14 15
lista_atrib          : 54 55 75 76 77 78
lista_comp           : 20 22
lista_id             : 7 8
llaves               : 11 12 12 15 16 17 18
loop                 : 5
op                   : 20
orden                : 27
recp                 : 35 36 37 38 39 40
unary_comp           : 19

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . body
    (2) inicio -> . body inicio
    (3) body -> . cond
    (4) body -> . inst SEMICOLON
    (5) body -> . loop
    (6) body -> . decl_function
    (11) cond -> . IF LPAREN comparative RPAREN llaves
    (12) cond -> . IF LPAREN comparative RPAREN llaves ELSE llaves
    (26) inst -> . asig
    (27) inst -> . orden
    (28) inst -> . funcall
    (29) inst -> . break
    (30) inst -> . RETURN exp
    (31) inst -> . RETURN
    (15) loop -> . FOR LPAREN inst SEMICOLON comparative SEMICOLON exp RPAREN llaves
    (16) loop -> . WHILE LPAREN comparative RPAREN llaves
    (17) loop -> . DO llaves WHILE LPAREN comparative RPAREN SEMICOLON
    (18) loop -> . FOREACH LPAREN ID AS ID RPAREN llaves
    (7) decl_function -> . FUN ID LPAREN lista_id RPAREN LBRACE body_list RBRACE
    (35) asig -> . recp ASSIGN exp
    (36) asig -> . recp EQ_PLUS exp
    (37) asig -> . recp EQ_MINUS exp
    (38) asig -> . recp EQ_TIMES exp
    (39) asig -> . recp EQ_DIV exp
    (40) asig -> . recp EQ_MODULO exp
    (75) orden -> . HIT LPAREN lista_atrib RPAREN
    (76) orden -> . PASS LPAREN lista_atrib RPAREN
    (77) orden -> . GOTO LPAREN lista_atrib RPAREN
    (78) orden -> . SHOOT LPAREN lista_atrib RPAREN
    (54) funcall -> . ID LPAREN lista_atrib RPAREN
    (32) break -> . BREAK
    (33) recp -> . ID
    (34) recp -> . ID LBRACKET exp RBRACKET

    IF              shift and go to state 20
    RETURN          shift and go to state 3
    FOR             shift and go to state 12
    WHILE           shift and go to state 7
    DO              shift and go to state 2
    FOREACH         shift and go to state 15
    FUN             shift and go to state 6
    HIT             shift and go to state 17
    PASS            shift and go to state 16
    GOTO            shift and go to state 4
    SHOOT           shift and go to state 1
    ID              shift and go to state 19
    BREAK           shift and go to state 23

    body                           shift and go to state 11
    orden                          shift and go to state 21
    decl_function                  shift and go to state 22
    asig                           shift and go to state 9
    funcall                        shift and go to state 5
    inst                           shift and go to state 14
    break                          shift and go to state 13
    inicio                         shift and go to state 10
    cond                           shift and go to state 8
    recp                           shift and go to state 18
    loop                           shift and go to state 24

state 1

    (78) orden -> SHOOT . LPAREN lista_atrib RPAREN

    LPAREN          shift and go to state 25


state 2

    (17) loop -> DO . llaves WHILE LPAREN comparative RPAREN SEMICOLON
    (13) llaves -> . LBRACE body_list RBRACE
    (14) llaves -> . inst SEMICOLON
    (26) inst -> . asig
    (27) inst -> . orden
    (28) inst -> . funcall
    (29) inst -> . break
    (30) inst -> . RETURN exp
    (31) inst -> . RETURN
    (35) asig -> . recp ASSIGN exp
    (36) asig -> . recp EQ_PLUS exp
    (37) asig -> . recp EQ_MINUS exp
    (38) asig -> . recp EQ_TIMES exp
    (39) asig -> . recp EQ_DIV exp
    (40) asig -> . recp EQ_MODULO exp
    (75) orden -> . HIT LPAREN lista_atrib RPAREN
    (76) orden -> . PASS LPAREN lista_atrib RPAREN
    (77) orden -> . GOTO LPAREN lista_atrib RPAREN
    (78) orden -> . SHOOT LPAREN lista_atrib RPAREN
    (54) funcall -> . ID LPAREN lista_atrib RPAREN
    (32) break -> . BREAK
    (33) recp -> . ID
    (34) recp -> . ID LBRACKET exp RBRACKET

    LBRACE          shift and go to state 28
    RETURN          shift and go to state 3
    HIT             shift and go to state 17
    PASS            shift and go to state 16
    GOTO            shift and go to state 4
    SHOOT           shift and go to state 1
    ID              shift and go to state 19
    BREAK           shift and go to state 23

    orden                          shift and go to state 21
    llaves                         shift and go to state 26
    asig                           shift and go to state 9
    funcall                        shift and go to state 5
    inst                           shift and go to state 27
    break                          shift and go to state 13
    recp                           shift and go to state 18

state 3

    (30) inst -> RETURN . exp
    (31) inst -> RETURN .
    (41) exp -> . exp_unary
    (42) exp -> . LPAREN exp RPAREN
    (43) exp -> . exp PLUS exp
    (44) exp -> . exp MINUS exp
    (45) exp -> . exp TIMES exp
    (46) exp -> . exp DIV exp
    (47) exp -> . exp MODULO exp
    (48) exp -> . DOUBLE_PLUS exp_unary
    (49) exp -> . exp_unary DOUBLE_PLUS
    (50) exp -> . exp_unary DOUBLE_MINUS
    (51) exp -> . DOUBLE_MINUS exp_unary
    (52) exp -> . ID LBRACKET exp RBRACKET
    (53) exp -> . funcall
    (58) exp_unary -> . INUMBER
    (59) exp_unary -> . FNUMBER
    (60) exp_unary -> . ID
    (61) exp_unary -> . MINUS exp_unary
    (62) exp_unary -> . TRUE
    (63) exp_unary -> . FALSE
    (54) funcall -> . ID LPAREN lista_atrib RPAREN

    SEMICOLON       reduce using rule 31 (inst -> RETURN .)
    LPAREN          shift and go to state 36
    DOUBLE_PLUS     shift and go to state 35
    DOUBLE_MINUS    shift and go to state 33
    ID              shift and go to state 40
    INUMBER         shift and go to state 32
    FNUMBER         shift and go to state 29
    MINUS           shift and go to state 39
    TRUE            shift and go to state 37
    FALSE           shift and go to state 30

    funcall                        shift and go to state 34
    exp_unary                      shift and go to state 38
    exp                            shift and go to state 31

state 4

    (77) orden -> GOTO . LPAREN lista_atrib RPAREN

    LPAREN          shift and go to state 41


state 5

    (28) inst -> funcall .

    SEMICOLON       reduce using rule 28 (inst -> funcall .)


state 6

    (7) decl_function -> FUN . ID LPAREN lista_id RPAREN LBRACE body_list RBRACE

    ID              shift and go to state 42


state 7

    (16) loop -> WHILE . LPAREN comparative RPAREN llaves

    LPAREN          shift and go to state 43


state 8

    (3) body -> cond .

    IF              reduce using rule 3 (body -> cond .)
    RETURN          reduce using rule 3 (body -> cond .)
    FOR             reduce using rule 3 (body -> cond .)
    WHILE           reduce using rule 3 (body -> cond .)
    DO              reduce using rule 3 (body -> cond .)
    FOREACH         reduce using rule 3 (body -> cond .)
    FUN             reduce using rule 3 (body -> cond .)
    HIT             reduce using rule 3 (body -> cond .)
    PASS            reduce using rule 3 (body -> cond .)
    GOTO            reduce using rule 3 (body -> cond .)
    SHOOT           reduce using rule 3 (body -> cond .)
    ID              reduce using rule 3 (body -> cond .)
    BREAK           reduce using rule 3 (body -> cond .)
    $end            reduce using rule 3 (body -> cond .)
    RBRACE          reduce using rule 3 (body -> cond .)


state 9

    (26) inst -> asig .

    SEMICOLON       reduce using rule 26 (inst -> asig .)


state 10

    (0) S' -> inicio .



state 11

    (1) inicio -> body .
    (2) inicio -> body . inicio
    (1) inicio -> . body
    (2) inicio -> . body inicio
    (3) body -> . cond
    (4) body -> . inst SEMICOLON
    (5) body -> . loop
    (6) body -> . decl_function
    (11) cond -> . IF LPAREN comparative RPAREN llaves
    (12) cond -> . IF LPAREN comparative RPAREN llaves ELSE llaves
    (26) inst -> . asig
    (27) inst -> . orden
    (28) inst -> . funcall
    (29) inst -> . break
    (30) inst -> . RETURN exp
    (31) inst -> . RETURN
    (15) loop -> . FOR LPAREN inst SEMICOLON comparative SEMICOLON exp RPAREN llaves
    (16) loop -> . WHILE LPAREN comparative RPAREN llaves
    (17) loop -> . DO llaves WHILE LPAREN comparative RPAREN SEMICOLON
    (18) loop -> . FOREACH LPAREN ID AS ID RPAREN llaves
    (7) decl_function -> . FUN ID LPAREN lista_id RPAREN LBRACE body_list RBRACE
    (35) asig -> . recp ASSIGN exp
    (36) asig -> . recp EQ_PLUS exp
    (37) asig -> . recp EQ_MINUS exp
    (38) asig -> . recp EQ_TIMES exp
    (39) asig -> . recp EQ_DIV exp
    (40) asig -> . recp EQ_MODULO exp
    (75) orden -> . HIT LPAREN lista_atrib RPAREN
    (76) orden -> . PASS LPAREN lista_atrib RPAREN
    (77) orden -> . GOTO LPAREN lista_atrib RPAREN
    (78) orden -> . SHOOT LPAREN lista_atrib RPAREN
    (54) funcall -> . ID LPAREN lista_atrib RPAREN
    (32) break -> . BREAK
    (33) recp -> . ID
    (34) recp -> . ID LBRACKET exp RBRACKET

    $end            reduce using rule 1 (inicio -> body .)
    IF              shift and go to state 20
    RETURN          shift and go to state 3
    FOR             shift and go to state 12
    WHILE           shift and go to state 7
    DO              shift and go to state 2
    FOREACH         shift and go to state 15
    FUN             shift and go to state 6
    HIT             shift and go to state 17
    PASS            shift and go to state 16
    GOTO            shift and go to state 4
    SHOOT           shift and go to state 1
    ID              shift and go to state 19
    BREAK           shift and go to state 23

    body                           shift and go to state 11
    orden                          shift and go to state 21
    decl_function                  shift and go to state 22
    asig                           shift and go to state 9
    funcall                        shift and go to state 5
    inst                           shift and go to state 14
    break                          shift and go to state 13
    inicio                         shift and go to state 44
    cond                           shift and go to state 8
    recp                           shift and go to state 18
    loop                           shift and go to state 24

state 12

    (15) loop -> FOR . LPAREN inst SEMICOLON comparative SEMICOLON exp RPAREN llaves

    LPAREN          shift and go to state 45


state 13

    (29) inst -> break .

    SEMICOLON       reduce using rule 29 (inst -> break .)


state 14

    (4) body -> inst . SEMICOLON

    SEMICOLON       shift and go to state 46


state 15

    (18) loop -> FOREACH . LPAREN ID AS ID RPAREN llaves

    LPAREN          shift and go to state 47


state 16

    (76) orden -> PASS . LPAREN lista_atrib RPAREN

    LPAREN          shift and go to state 48


state 17

    (75) orden -> HIT . LPAREN lista_atrib RPAREN

    LPAREN          shift and go to state 49


state 18

    (35) asig -> recp . ASSIGN exp
    (36) asig -> recp . EQ_PLUS exp
    (37) asig -> recp . EQ_MINUS exp
    (38) asig -> recp . EQ_TIMES exp
    (39) asig -> recp . EQ_DIV exp
    (40) asig -> recp . EQ_MODULO exp

    ASSIGN          shift and go to state 55
    EQ_PLUS         shift and go to state 51
    EQ_MINUS        shift and go to state 53
    EQ_TIMES        shift and go to state 50
    EQ_DIV          shift and go to state 52
    EQ_MODULO       shift and go to state 54


state 19

    (54) funcall -> ID . LPAREN lista_atrib RPAREN
    (33) recp -> ID .
    (34) recp -> ID . LBRACKET exp RBRACKET

    LPAREN          shift and go to state 56
    ASSIGN          reduce using rule 33 (recp -> ID .)
    EQ_PLUS         reduce using rule 33 (recp -> ID .)
    EQ_MINUS        reduce using rule 33 (recp -> ID .)
    EQ_TIMES        reduce using rule 33 (recp -> ID .)
    EQ_DIV          reduce using rule 33 (recp -> ID .)
    EQ_MODULO       reduce using rule 33 (recp -> ID .)
    LBRACKET        shift and go to state 57


state 20

    (11) cond -> IF . LPAREN comparative RPAREN llaves
    (12) cond -> IF . LPAREN comparative RPAREN llaves ELSE llaves

    LPAREN          shift and go to state 58


state 21

    (27) inst -> orden .

    SEMICOLON       reduce using rule 27 (inst -> orden .)


state 22

    (6) body -> decl_function .

    IF              reduce using rule 6 (body -> decl_function .)
    RETURN          reduce using rule 6 (body -> decl_function .)
    FOR             reduce using rule 6 (body -> decl_function .)
    WHILE           reduce using rule 6 (body -> decl_function .)
    DO              reduce using rule 6 (body -> decl_function .)
    FOREACH         reduce using rule 6 (body -> decl_function .)
    FUN             reduce using rule 6 (body -> decl_function .)
    HIT             reduce using rule 6 (body -> decl_function .)
    PASS            reduce using rule 6 (body -> decl_function .)
    GOTO            reduce using rule 6 (body -> decl_function .)
    SHOOT           reduce using rule 6 (body -> decl_function .)
    ID              reduce using rule 6 (body -> decl_function .)
    BREAK           reduce using rule 6 (body -> decl_function .)
    $end            reduce using rule 6 (body -> decl_function .)
    RBRACE          reduce using rule 6 (body -> decl_function .)


state 23

    (32) break -> BREAK .

    SEMICOLON       reduce using rule 32 (break -> BREAK .)


state 24

    (5) body -> loop .

    IF              reduce using rule 5 (body -> loop .)
    RETURN          reduce using rule 5 (body -> loop .)
    FOR             reduce using rule 5 (body -> loop .)
    WHILE           reduce using rule 5 (body -> loop .)
    DO              reduce using rule 5 (body -> loop .)
    FOREACH         reduce using rule 5 (body -> loop .)
    FUN             reduce using rule 5 (body -> loop .)
    HIT             reduce using rule 5 (body -> loop .)
    PASS            reduce using rule 5 (body -> loop .)
    GOTO            reduce using rule 5 (body -> loop .)
    SHOOT           reduce using rule 5 (body -> loop .)
    ID              reduce using rule 5 (body -> loop .)
    BREAK           reduce using rule 5 (body -> loop .)
    $end            reduce using rule 5 (body -> loop .)
    RBRACE          reduce using rule 5 (body -> loop .)


state 25

    (78) orden -> SHOOT LPAREN . lista_atrib RPAREN
    (55) lista_atrib -> . exp COMMA lista_atrib
    (56) lista_atrib -> . exp
    (57) lista_atrib -> . empty
    (41) exp -> . exp_unary
    (42) exp -> . LPAREN exp RPAREN
    (43) exp -> . exp PLUS exp
    (44) exp -> . exp MINUS exp
    (45) exp -> . exp TIMES exp
    (46) exp -> . exp DIV exp
    (47) exp -> . exp MODULO exp
    (48) exp -> . DOUBLE_PLUS exp_unary
    (49) exp -> . exp_unary DOUBLE_PLUS
    (50) exp -> . exp_unary DOUBLE_MINUS
    (51) exp -> . DOUBLE_MINUS exp_unary
    (52) exp -> . ID LBRACKET exp RBRACKET
    (53) exp -> . funcall
    (74) empty -> .
    (58) exp_unary -> . INUMBER
    (59) exp_unary -> . FNUMBER
    (60) exp_unary -> . ID
    (61) exp_unary -> . MINUS exp_unary
    (62) exp_unary -> . TRUE
    (63) exp_unary -> . FALSE
    (54) funcall -> . ID LPAREN lista_atrib RPAREN

    LPAREN          shift and go to state 36
    DOUBLE_PLUS     shift and go to state 35
    DOUBLE_MINUS    shift and go to state 33
    ID              shift and go to state 40
    RPAREN          reduce using rule 74 (empty -> .)
    INUMBER         shift and go to state 32
    FNUMBER         shift and go to state 29
    MINUS           shift and go to state 39
    TRUE            shift and go to state 37
    FALSE           shift and go to state 30

    funcall                        shift and go to state 34
    lista_atrib                    shift and go to state 60
    exp_unary                      shift and go to state 38
    empty                          shift and go to state 59
    exp                            shift and go to state 61

state 26

    (17) loop -> DO llaves . WHILE LPAREN comparative RPAREN SEMICOLON

    WHILE           shift and go to state 62


state 27

    (14) llaves -> inst . SEMICOLON

    SEMICOLON       shift and go to state 63


state 28

    (13) llaves -> LBRACE . body_list RBRACE
    (64) body_list -> . body
    (65) body_list -> . body body_list
    (66) body_list -> . empty
    (3) body -> . cond
    (4) body -> . inst SEMICOLON
    (5) body -> . loop
    (6) body -> . decl_function
    (74) empty -> .
    (11) cond -> . IF LPAREN comparative RPAREN llaves
    (12) cond -> . IF LPAREN comparative RPAREN llaves ELSE llaves
    (26) inst -> . asig
    (27) inst -> . orden
    (28) inst -> . funcall
    (29) inst -> . break
    (30) inst -> . RETURN exp
    (31) inst -> . RETURN
    (15) loop -> . FOR LPAREN inst SEMICOLON comparative SEMICOLON exp RPAREN llaves
    (16) loop -> . WHILE LPAREN comparative RPAREN llaves
    (17) loop -> . DO llaves WHILE LPAREN comparative RPAREN SEMICOLON
    (18) loop -> . FOREACH LPAREN ID AS ID RPAREN llaves
    (7) decl_function -> . FUN ID LPAREN lista_id RPAREN LBRACE body_list RBRACE
    (35) asig -> . recp ASSIGN exp
    (36) asig -> . recp EQ_PLUS exp
    (37) asig -> . recp EQ_MINUS exp
    (38) asig -> . recp EQ_TIMES exp
    (39) asig -> . recp EQ_DIV exp
    (40) asig -> . recp EQ_MODULO exp
    (75) orden -> . HIT LPAREN lista_atrib RPAREN
    (76) orden -> . PASS LPAREN lista_atrib RPAREN
    (77) orden -> . GOTO LPAREN lista_atrib RPAREN
    (78) orden -> . SHOOT LPAREN lista_atrib RPAREN
    (54) funcall -> . ID LPAREN lista_atrib RPAREN
    (32) break -> . BREAK
    (33) recp -> . ID
    (34) recp -> . ID LBRACKET exp RBRACKET

    RBRACE          reduce using rule 74 (empty -> .)
    IF              shift and go to state 20
    RETURN          shift and go to state 3
    FOR             shift and go to state 12
    WHILE           shift and go to state 7
    DO              shift and go to state 2
    FOREACH         shift and go to state 15
    FUN             shift and go to state 6
    HIT             shift and go to state 17
    PASS            shift and go to state 16
    GOTO            shift and go to state 4
    SHOOT           shift and go to state 1
    ID              shift and go to state 19
    BREAK           shift and go to state 23
